fix css on tablet

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -2,7 +2,7 @@
 $icon-font-path:        "../fonts/";
 // Grid settings
 $main-sm-columns:       12;
-$sidebar-sm-columns:    4;
+$sidebar-sm-columns:    12;
 
 // Colors
 $brand-primary: #000000;
